syntax = "proto3"; //Specify proto3 version.

package trafico_aereo; //Optional: unique package name.

//Service. define the methods that the grpc server can expose to the client.
service ServicioAereo {
  rpc IP (Request) returns (Response);
  rpc Aterrizaje (Request_Aterrizar) returns (Response_Aterrizar);
  rpc Despegue (Request_Despegar) returns (Response_Despegar);
  rpc Dejar_air (r_estado_avion) returns (estado_avion);
  rpc Destiny (r_Request_Destino) returns (Request_Destino);
}

message Request {
	string ip_cliente = 1;
}

message Response {
	string ip_server = 1;
}

message r_estado_avion{
  int32 fuel=1;
  int32 psj=2;
  string ip_a=3;
};

message Request_Aterrizar {
  int32 pos = 1;
}

message estado_avion{
  int32 fuel=1;
  int32 psj=2;
  string ip_a=3;
}

message Response_Aterrizar  {
  int32 pos= 1;
  string ip_cliente = 2;
}

message Request_Despegar {
  int32 pos_d= 1;

}

message Response_Despegar {
 int32 pos_d= 1;
}

message Request_Destino {
  string ip_d= 1;

}
message r_Request_Destino {
  string ip_d= 1;

}
